argo-workflows/base/argo-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-server
spec:
  template:
    spec:
      containers:
      - args:
        - server
        - --auth-mode=server
        - --insecure
