argo-workflows/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server
  namespace: argo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.audryus.arpa`)
      services:
        - name: workflow-argo-workflows-server
          port: 2746
          kind: Service
          scheme: http
  tls:
    secretName: argo-tls-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argo-server-http
  namespace: argo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argo.audryus.arpa`)
      priority: 10
      services:
        - name: workflow-argo-workflows-server
          port: 2746
          scheme: http
      middlewares:
        - name: redirecttohttps
